web api: index view updated

--- a/Reminder/Reminder.WebApi/Views/Home/Index.cshtml
+++ b/Reminder/Reminder.WebApi/Views/Home/Index.cshtml
@@ -1,4 +1,4 @@
-﻿<div>
+﻿@*<div>
     <label>Введите email</label><br />
     <input type="email" id="email" /> <br /><br />
     <label>Введите пароль</label><br />
@@ -6,73 +6,93 @@
     <label>Подтвердите пароль</label><br />
     <input type="password" id="confirmpassword" /><br /><br />
     <input type="submit" id="submit" value="Регистрация" />
-</div>
+</div>*@
 
-<div class="userInfo" style="display:none;">
-    <p>Вы вошли как: <span class="userName"></span></p>
-    <input type="button" value="Выйти" id="logOut" />
-</div>
-<div class="loginForm">
+@*<div class="loginForm">
     <h3>Вход на сайт</h3>
     <label>Введите email</label><br />
     <input type="email" id="emailLogin" /> <br /><br />
     <label>Введите пароль</label><br />
     <input type="password" id="passwordLogin" /><br /><br />
     <input type="submit" id="submitLogin" value="Логин" />
+</div>*@
+<div class="container" style="display: none;">
+    <p>You entered as <span class="userName"></span></p>
+    <input type="button" class="btn btn-default" value="Logout" id="logOut" />
+</div>
+
+<div class="container" id="loginform">
+    <h2>Login</h2>
+    <div class="form-group">
+        <label>User name</label>
+        <input type="text" class="form-control" id="username" />
+    </div>
+    
+    <div class="form-group">
+        <label>User name</label>
+        <input type="password" class="form-control" id="password" />
+    </div>
+    
+    <input type="button" id="submitLogin" class="btn btn-primary" value="Login" />
 </div>
 
 @section scripts{
     <script type="text/javascript">
-        $(function () {
-            $('#submit').click(function (e) {
+        $(document).ready(function() {
+            // Login to app
+            var tokenKey = "tokenInfo";
+            $('#submitLogin').click(function (e) {
+                e.preventDefault();
+                var loginData = {
+                    grant_type: 'password',
+                    username: $('#username').val(),
+                    password: $('#password').val()
+                };
+
+                $.ajax({
+                    type: 'POST',
+                    url: '/Token',
+                    data: loginData,
+                    success: function (result) {
+                        $('.userName').text(data.userName);
+                        $('.userInfo').css('display', 'block');
+                        $('.loginForm').css('display', 'none');
+                        // save access token to session storage
+                        sessionStorage.setItem(tokenKey, result.access_token);
+                        console.log(result.access_token);
+                    },
+                    error: function (data) {
+                        alert(data.error);
+                    }
+                });
+            });
+
+            // Logout
+            $('#logOut').click(function(e) {
+                e.preventDefault();
+                sessionStorage.removeItem(tokenKey);
+            });
+
+            // Register
+            $('#submit').click(function(e) {
                 e.preventDefault();
                 var data = {
                     Email: $('#email').val(),
                     Password: $('#password').val(),
                     ConfirmPassword: $('#confirmpassword').val()
                 };
- 
+
                 $.ajax({
                     type: 'POST',
                     url: '/api/Account/Register',
                     contentType: 'application/json; charset=utf-8',
                     data: JSON.stringify(data)
-                }).success(function (data) {
-                    alert("Регистрация пройдена");
-                }).fail(function (data) {
-                    alert("В процесе регистрации возникла ошибка");
+                }).success(function(data) {
+                    alert("Register successful");
+                }).fail(function(data) {
+                    alert("Error during register");
                 });
             });
-
-            var tokenKey = "tokenInfo";
-            $('#submitLogin').click(function (e) {
-                e.preventDefault();
-                var loginData = {
-                    grant_type: 'password',
-                    username: $('#emailLogin').val(),
-                    password: $('#passwordLogin').val()
-                };
- 
-                $.ajax({
-                    type: 'POST',
-                    url: '/Token',
-                    data: loginData
-                }).success(function (data) {
-                    $('.userName').text(data.userName);
-                    $('.userInfo').css('display', 'block');
-                    $('.loginForm').css('display', 'none');
-                    // сохраняем в хранилище sessionStorage токен доступа
-                    sessionStorage.setItem(tokenKey, data.access_token);
-                    console.log(data.access_token);
-                }).fail(function (data) {
-                    alert('При логине возникла ошибка');
-                });
-            });
- 
-            $('#logOut').click(function (e) {
-                e.preventDefault();
-                sessionStorage.removeItem(tokenKey);
-            });
-        })
+        });
     </script>
 }
