--- a/Reminder/Reminder.WebApi/Views/Home/Index.cshtml
+++ b/Reminder/Reminder.WebApi/Views/Home/Index.cshtml
@@ -27,16 +27,17 @@
         <label>User name</label>
         <input type="text" class="form-control" id="username" />
     </div>
-    
+
     <div class="form-group">
         <label>Password</label>
         <input type="password" class="form-control" id="password" />
     </div>
-    
+
     <input type="button" id="submitLogin" class="btn btn-primary" value="Login" />
+    <p>Don't have an account? <a id="registerLink" href="#">Register</a></p>
 </div>
 
-<div class="container" id="registerform">
+<div class="container" id="registerform" style="display: none;">
     <h2>Register</h2>
     <div class="form-group">
         <label>User name</label>
@@ -54,11 +55,26 @@
     </div>
 
     <input type="button" id="submitRegister" class="btn btn-success" value="Register" />
+    <p>Already have an account? <a id="loginLink" href="#">Login</a></p>
 </div>
 
 @section scripts{
     <script type="text/javascript">
-        $(document).ready(function() {
+        $(document).ready(function () {
+            // Register link clicked
+            $("#registerLink").click(function(e) {
+                e.preventDefault();
+                $("#loginform").css("display", "none");
+                $("#registerform").css("display", "block");
+            });
+
+            // Login link clicked
+            $("#loginLink").click(function(e) {
+                e.preventDefault();
+                $("#registerform").css("display", "none");
+                $("#loginform").css("display", "block");
+            });
+
             // Login to app
             var tokenKey = "tokenInfo";
             $('#submitLogin').click(function (e) {
