--- a/Reminder/Reminder.WebApi/Views/Shared/_Layout.cshtml
+++ b/Reminder/Reminder.WebApi/Views/Shared/_Layout.cshtml
@@ -8,36 +8,18 @@
     @Scripts.Render("~/bundles/modernizr")
 </head>
 <body>
-    <div class="navbar navbar-inverse navbar-fixed-top">
-        <div class="container">
-            <div class="navbar-header">
-                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                </button>
-                @Html.ActionLink("Application name", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
-            </div>
-            <div class="navbar-collapse collapse">
-                <ul class="nav navbar-nav">
-                    <li>@Html.ActionLink("Home", "Index", "Home", new { area = "" }, null)</li>
-                    <li>@Html.ActionLink("API", "Index", "Help", new { area = "" }, null)</li>
-                </ul>
-            </div>
-        </div>
+    <div class="topnav">
+        @Html.ActionLink("Home", "Index", "Home", new { area = "" }, null)
     </div>
-    <div class="container body-content">
-        <!-- User name and logout button -->
-        <div class="container" id="loginSuccessPanel" style="display: none;">
-            <p>You entered as <span id="userName"></span></p>
-            <input type="button" class="btn btn-default" value="Logout" id="logOut" />
-        </div>
-        @RenderBody()
-        <hr />
-        <footer>
-            <p>&copy; @DateTime.Now.Year - My ASP.NET Application</p>
-        </footer>
+
+    <!-- User name and logout button -->
+    <div class="container" id="loginSuccessPanel" style="display: none;">
+        <p>
+            You entered as <span id="userName"></span>
+        </p>
+        <input type="button" class="btn btn-default" value="Logout" id="logOut" />
     </div>
+    @RenderBody()
 
     @Scripts.Render("~/bundles/jquery")
     @Scripts.Render("~/bundles/bootstrap")
