--- a/Reminder/Reminder.WebApi/Content/Site.css
+++ b/Reminder/Reminder.WebApi/Content/Site.css
@@ -1,17 +1,139 @@
 ﻿body {
-    padding-top: 50px;
-    padding-bottom: 20px;
+    margin: 0;
+    font-family: Arial, Helvetica, sans-serif;
 }
 
-/* Set padding to keep content from hitting the edges */
-.body-content {
-    padding-left: 15px;
-    padding-right: 15px;
+.header {
+    background-size: cover;
+    height: 100vh;
+    background: url(../Content/Images/mainpage_background.jpg) fixed no-repeat center;
+    background-size: 100%;
+    color: white;
+    text-align: center;
 }
 
-/* Set width on the form input elements since they're 100% wide by default */
-input,
-select,
-textarea {
-    max-width: 280px;
+/* Top navigation bar styles */
+.topnav {
+    background-color: #323232;
+    height: 90px;
+}
+
+.topnav-right {
+    float: right;
+}
+
+.topnav a {
+    line-height: 60px;
+    float: left;
+    display: block;
+    color: white;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+    font-size: 17px;
+}
+
+    .topnav a:hover {
+        background-color: #464646;
+        color: white;
+    }
+
+    .topnav a.active {
+        background-color: #2196F3;
+        color: white;
+    }
+
+@media screen and (max-width: 600px) {
+    .topnav {
+        height: auto;
+    }
+
+    .topnav-right {
+        width: 100%;
+        float: none;
+    }
+
+    .topnav a {
+        float: none;
+        display: block;
+        line-height: normal;
+        text-align: left;
+        width: 100%;
+        margin: 0;
+        padding: 14px;
+    }
+}
+
+.dropdown {
+    position: relative;
+    display: inline-block;
+}
+
+.dropdown-menu {
+    transition-duration: 0.5s;
+    left: auto;
+    right: 0;
+    border: none;
+    border-radius: 0;
+    height: auto;
+    float: right;
+    z-index: 1;
+}
+
+    .dropdown-menu li a {
+        line-height: 75px;
+    }
+
+.dropdown-content {
+    cursor: pointer;
+    width: 160px;
+    height: 75px;
+    text-align: center;
+    color: #202020;
+    padding: 12px 14px;
+    text-decoration: none;
+    display: block;
+    font-size: 17px;
+}
+
+.dropdown a:hover {
+    background-color: #464646;
+}
+
+/* Buttons */
+.button {
+    display: inline-block;
+    border: none; /* Remove borders */
+    color: white; /* Add a text color */
+    padding: 14px 28px; /* Add some padding */
+    cursor: pointer; /* Add a pointer cursor on mouse-over */
+    text-decoration: none;
+    width: 200px;
+}
+
+    .button:hover, .button:active, .button:visited {
+        color: white;
+        text-decoration: none;
+    }
+
+.success {
+    background-color: #4CAF50;
+}
+
+    .success:hover {
+        background-color: #46a049;
+    }
+
+.button-info {
+    background-color: #2196F3;
+}
+
+    /* Blue */
+    .button-info:hover {
+        background: #0b7dda;
+    }
+
+.button:disabled {
+    background-color: #e7e7e7;
+    cursor: not-allowed
 }
