--- a/Reminder/Reminder.WebApi/Views/Home/Register.cshtml
+++ b/Reminder/Reminder.WebApi/Views/Home/Register.cshtml
@@ -11,7 +11,7 @@
 </div>
 
 <!-- Register form -->
-<div class="container" id="registerform" style="display: none;">
+<div class="container" id="registerform">
     <h2>Register</h2>
     <div class="form-group">
         <label>User name</label>
