WebApi: updated Login and Register views

--- a/Reminder/Reminder.WebApi/Views/Home/Login.cshtml
+++ b/Reminder/Reminder.WebApi/Views/Home/Login.cshtml
@@ -1,23 +1,72 @@
-﻿<div class="alert alert-success fade in" id="loginSuccessAlert" role="alert" style="display: none;">
-    <strong>Login successful</strong>
-</div>
-<div class="alert alert-danger fade in" id="loginFailedAlert" role="alert" style="display: none;">
-    <strong>Login failed</strong>
-</div>
+﻿@{
+    ViewBag.Title = "Login";
+}
 
-<!-- Login form -->
-<div id="loginform">
-    <h2>Login</h2>
-    <hr/>
-    <div>
-        <label for="username">User name</label>
-        <input type="text" class="form-control input-control" id="username" />
+<div class="header">
+    <div class="container">
+        <div class="alert alert-success fade in" id="loginSuccessAlert" role="alert" style="display: none;">
+            <strong>Login successful</strong>
+        </div>
+        <div class="alert alert-danger fade in" id="loginFailedAlert" role="alert" style="display: none;">
+            <strong>Login failed</strong>
+        </div>
+
+        <!-- Login form -->
+        <div id="loginform">
+            <h2>Login</h2>
+            <hr />
+            <div>
+                <label for="username">User name</label>
+                <input type="text" class="form-control input-control" id="username" />
+            </div>
+
+            <div>
+                <label for="password">Password</label>
+                <input type="password" class="form-control input-control" id="password" />
+            </div>
+            <p>Don't have an account? @Html.ActionLink("Register", "Register", "Home")</p>
+            <br />
+            <input type="button" id="submitLogin" class="button button-info" value="Login" />
+        </div>
     </div>
-
-    <div>
-        <label for="password">Password</label>
-        <input type="password" class="form-control input-control" id="password" />
-    </div>
-
-    <input type="button" id="submitLogin" class="button button-info" value="Login" />
 </div>
+
+@section scripts
+{
+    <script type="text/javascript">
+        $(document).ready(function () {
+            // Login to app
+            var tokenKey = "tokenInfo";
+            $("#submitLogin").click(function (e) {
+                e.preventDefault();
+                var loginData = {
+                    grant_type: 'password',
+                    username: $("#username").val(),
+                    password: $("#password").val()
+                };
+
+                $.ajax({
+                    type: 'POST',
+                    url: '/Token',
+                    data: loginData,
+                    success: function (result) {
+                        $(".userName").text(result.userName);
+                        $(".userInfo").css("display", "block");
+                        $(".loginForm").css("display", "none");
+                        // save access token to session storage
+                        sessionStorage.setItem(tokenKey, result.access_token);
+                        $("#loginSuccessPanel").css("display", "block");
+                        $("#userName").html(result.userName);
+
+                        $("#loginSuccessAlert").css("display", "block");
+                        setTimeout("$('#loginSuccessAlert').css('display', 'none');", 3000);
+                    },
+                    error: function () {
+                        $("#loginFailedAlert").css("display", "block");
+                        setTimeout("$('#loginFailedAlert').css('display', 'none');", 3000);
+                    }
+                });
+            });
+        });
+    </script>
+}
