--- a/Reminder/Reminder.WebApi/Content/Site.css
+++ b/Reminder/Reminder.WebApi/Content/Site.css
@@ -5,11 +5,9 @@
 
 .header {
     background-size: cover;
-    height: 100vh;
-    background: url('Images/mainpage_background.jpg') fixed no-repeat center;
-    background-size: 100%;
+    height: 80vh;
+    background: url('Images/main_background.jpg') fixed no-repeat top;
     color: white;
-    text-align: center;
 }
 
 /* Top navigation bar styles */
@@ -108,7 +106,7 @@
     padding: 14px 28px; /* Add some padding */
     cursor: pointer; /* Add a pointer cursor on mouse-over */
     text-decoration: none;
-    width: 200px;
+    width: 250px;
 }
 
     .button:hover, .button:active, .button:visited {
