--- a/Reminder/Reminder.WebApi/Views/Home/Register.cshtml
+++ b/Reminder/Reminder.WebApi/Views/Home/Register.cshtml
@@ -1,38 +1,43 @@
-﻿
-@{
+﻿@{
     ViewBag.Title = "Register";
 }
 
-<div class="alert alert-success fade in" id="registerSuccessAlert" role="alert" style="display: none;">
-    <strong>Register successful</strong>
-</div>
-<div class="alert alert-danger fade in" id="registerFailedAlert" role="alert" style="display: none;">
-    <strong>Register failed</strong>
-</div>
+<div class="header">
+    <div class="container">
+        <div class="alert alert-success fade in" id="registerSuccessAlert" role="alert" style="display: none;">
+            <strong>Register successful</strong>
+        </div>
+        <div class="alert alert-danger fade in" id="registerFailedAlert" role="alert" style="display: none;">
+            <strong>Register failed</strong>
+        </div>
 
-<!-- Register form -->
-<div class="container" id="registerform">
-    <h2>Register</h2>
-    <div class="form-group">
-        <label>User name</label>
-        <input type="text" class="form-control" id="registerUsername" />
+        <!-- Register form -->
+        <div id="registerform">
+            <h2>Register</h2>
+            <hr />
+            <div>
+                <label for="registerUsername">User name</label>
+                <input type="text" class="form-control input-control" id="registerUsername" />
+            </div>
+
+            <div>
+                <label for="registerPassword">Password</label>
+                <input type="password" class="form-control input-control" id="registerPassword" />
+            </div>
+
+            <div>
+                <label for="confirmPassword">Confirm password</label>
+                <input type="password" class="form-control input-control" id="confirmPassword" />
+            </div>
+            <p>Already have an account? @Html.ActionLink("Login", "Login", "Home")</p>
+            <br />
+            <input type="button" id="submitRegister" class="button success" value="Register" />
+        </div>
     </div>
-
-    <div class="form-group">
-        <label>Password</label>
-        <input type="password" class="form-control" id="registerPassword" />
-    </div>
-
-    <div class="form-group">
-        <label>Confirm password</label>
-        <input type="password" class="form-control" id="confirmPassword" />
-    </div>
-
-    <input type="button" id="submitRegister" class="btn btn-success" value="Register" />
-    <p>Already have an account? @Html.ActionLink("Login", "Login")</p>
 </div>
 
-@section scripts{
+@section scripts
+{
     <script type="text/javascript">
         $(document).ready(function () {
             // Register
