--- a/Reminder/Reminder.WebApi/Views/Shared/_Layout.cshtml
+++ b/Reminder/Reminder.WebApi/Views/Shared/_Layout.cshtml
@@ -13,7 +13,7 @@
     </div>
 
     <!-- User name and logout button -->
-    <div class="container" id="loginSuccessPanel" style="display: none;">
+    <div id="loginSuccessPanel" style="display: none;">
         <p>
             You entered as <span id="userName"></span>
         </p>
@@ -23,6 +23,8 @@
 
     @Scripts.Render("~/bundles/jquery")
     @Scripts.Render("~/bundles/bootstrap")
+    @Scripts.Render("~/scripts/jquery-3.3.1.js")
+    @Scripts.Render("~/scripts/jquery.unobtrusive-ajax.js")
     @RenderSection("scripts", required: false)
 </body>
 </html>
