--- a/Reminder/Reminder.WebApi/Views/Shared/_Layout.cshtml
+++ b/Reminder/Reminder.WebApi/Views/Shared/_Layout.cshtml
@@ -9,7 +9,7 @@
 </head>
 <body>
     <div class="topnav">
-        @Html.ActionLink("Home", "Index", "Home", new { area = "" }, null)
+        <a href="#">Home</a>
     </div>
 
     <!-- User name and logout button -->
