--- a/Reminder/Reminder.WebApi/Views/Shared/_Layout.cshtml
+++ b/Reminder/Reminder.WebApi/Views/Shared/_Layout.cshtml
@@ -9,16 +9,26 @@
 </head>
 <body>
     <div class="topnav">
-        <a href="#">Home</a>
+        @Ajax.ActionLink("Notes", "Notes", "Home", new AjaxOptions { UpdateTargetId = "formsContainer" })
+
+        <div class="topnav-right" id="loginPanel">
+            @Ajax.ActionLink("Register", "Register", "Home", new AjaxOptions { UpdateTargetId = "formsContainer" })
+            @Ajax.ActionLink("Login", "Login", "Home", new AjaxOptions { UpdateTargetId = "formsContainer" })
+        </div>
+        <!-- User name and logout button -->
+        <ul class="topnav-right" id="loginSuccessPanel" style="display: none;">
+            <li class="dropdown">
+                <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button">
+                    Hello, <span id="userName"></span>! <span class="caret"></span>
+                </a>
+                <ul class="dropdown-menu">
+                    <li><a class="dropdown-content" id="logOut">Logout</a></li>
+                </ul>
+            </li>
+            
+        </ul>
     </div>
 
-    <!-- User name and logout button -->
-    <div id="loginSuccessPanel" style="display: none;">
-        <p>
-            You entered as <span id="userName"></span>
-        </p>
-        <input type="button" class="btn btn-default" value="Logout" id="logOut" />
-    </div>
     @RenderBody()
 
     @Scripts.Render("~/bundles/jquery")
